in this commit i hav added the functionality of signup page with password hasshing

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/service">Profile</i></a></li>
-                  <li><a class="dropdown-item" href="#">Login</a></li>
-                  <li><a class="dropdown-item" href="#">Signup</a></li>
+                  <li><a class="dropdown-item" href="/login">Login</a></li>
+                  <li><a class="dropdown-item" href="/register">Signup</a></li>
                   <li><a class="dropdown-item" href="#">Orders</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Add item </i></a></li>
