--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,22 @@
-.container{
-    margin: 10px;
+.image-container {
+    height: 200px; /* Adjust the height as needed */
+    overflow: hidden;
+  }
+  
+  .image-container img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+.card-img {
+    width: 100%; /* Adjust this value as needed */
+    height: auto; /* Maintain aspect ratio */
 }
-h2{
-    color: red;
+.card .card-img {
+    width: 100%; /* Ensure the image takes the full width of its container */
+    height: auto; /* Maintain aspect ratio */
+    object-fit: contain; /* Ensure the entire image is visible */
 }
+.image-container {
+    height: 300px; /* Adjust the height as needed */
+  }
