--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Home{% endblock title %}
+{% block extra_head %}{% endblock extra_head %}
 {% block body %}
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+
 
 
 
@@ -32,158 +34,33 @@
 </div>
 
 
- <div class="container my-3">
+<div class="container my-3">
   <h2 class="my-4 text-center">Enjoy the shopping...</h2>
 
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+  <div class="row row-cols-1 row-cols-md-4 g-3">
+    {% for product in products %}
     <div class="col">
       <div class="card shadow-sm">
-        <img src="{% static 'img/ch3.jpg' %}" class="d-block w-100" alt="...">
+        <div class="image-container">
+          <img src="{% static product.image %}" class="card-img-top" alt="{{ product.name }}">
+        </div>
         <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
+          <p>  {{ product.name }}</p>
+          <p> <b>Manufacturer:</b> {{ product.manufacturer }}</p>
+          <p class="card-text"> <b>Price</b>:&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> {{ product.price }}</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
               <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
             </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
           </div>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/ch3.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/ch3.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/p3.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/p3.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/p3.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/po1.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/po1.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="{% static 'img/po1.jpg' %}" class="d-block w-100" alt="...">
-        <div class="card-body">
-          <p>Manufacture : Chanapatana Art and Craft</p>
-          <p class="card-text"><i class="fa-solid fa-indian-rupee-sign"></i>500</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
-            </div>
-            {% comment %} <small class="text-body-secondary">9 mins</small> {% endcomment %}
-          </div>
-        </div>
-      </div>
-    </div>
+    {% endfor %}
   </div>
-</div> 
+</div>
+
 {% endblock body %}
 
 
