--- a/static/style.css
+++ b/static/style.css
@@ -20,3 +20,52 @@
 .image-container {
     height: 300px; /* Adjust the height as needed */
   }
+
+/* Product Details Section Styles */
+/* Product Details Section Styles */
+
+
+/* Product Details Section Styles */
+.product-details {
+  padding: 50px 0;
+ 
+}
+
+.product-details img {
+  max-width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border: 1px solid rgb(228, 221, 221);
+  border-radius: 5%;
+  
+}
+
+.product-details h2 {
+  color: #333;
+}
+
+.product-details p {
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.product-details label {
+  margin-right: 10px;
+}
+
+.product-details .buttons button {
+  margin-right: 10px;
+}
+
+.product-details .buttons button:last-child {
+  margin-right: 0;
+}
+
+.product-details .buttons a {
+  margin-right: 10px;
+  color: #007bff; /* Bootstrap primary color */
+}
+
+.product-details h3 {
+  margin-top:
+}
