--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
           <p class="card-text"> <b>Price</b>:&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> {{ product.price }}</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+               <a href="{% url 'view_product' product.id %}" class="btn btn-sm btn-outline-secondary">View</a>
               <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
             </div>
           </div>
