added more products

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
 
 <div class="container my-3">
-  <h2 class="my-4 text-center">Enjoy the shopping...</h2>
+  <h2 class="my-4 text-center">Find your product....</h2>
 
   <div class="row row-cols-1 row-cols-md-4 g-3">
     {% for product in products %}
