--- a/static/style.css
+++ b/static/style.css
@@ -34,8 +34,8 @@
 .product-details img {
   max-width: 100%;
   height: 500px;
-  object-fit: cover;
-  border: 1px solid rgb(228, 221, 221);
+  /* object-fit: cover; */
+  /* border: 1px solid rgb(228, 221, 221); */
   border-radius: 5%;
   
 }
@@ -67,5 +67,12 @@
 }
 
 .product-details h3 {
-  margin-top:
+  margin-top:20px;
+ 
+
+}
+.cir{
+  padding: 5px;
+  border: 1px solid rgb(237, 231, 231);
+  border-radius: 50%;
 }
