--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -41,8 +41,8 @@
         </div>
         <div class="col-md-6">
             <h2>{{ product.name }}</h2>
-            <p>Manufacturer: {{ product.manufacturer }}</p>
-            <p>Price: {{ product.price }}</p>
+            <p><b>Manufacturer: {{ product.manufacturer }}</b></p>
+            <p>Price:&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> &nbsp;{{ product.price }}</p>
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" name="quantity" min="1" value="1">
             <div class="buttons mt-3">
@@ -50,11 +50,11 @@
                 <button type="button" class="btn btn-success">Buy Now</button>
                 <div class="mt-3">
                     <span>Share:</span>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#"><i class="fas fa-envelope"></i></a>
-                    <a href="#"><i class="far fa-copy"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f cir"></i></a>
+                    <a href="#"><i class="fab fa-twitter cir"></i></a>
+                    <a href="#"><i class="fab fa-whatsapp cir"></i></a>
+                    <a href="#"><i class="fas fa-envelope cir"></i></a>
+                    <a href="#"><i class="far fa-copy cir"></i></a>
                 </div>
             </div>
         </div>
