--- a/static/style.css
+++ b/static/style.css
@@ -71,8 +71,17 @@
  
 
 }
-.cir{
+/* .cir{
   padding: 5px;
   border: 1px solid rgb(237, 231, 231);
   border-radius: 50%;
+} */
+.btn-group{
+  margin-left: 200x;
 }
+
+
+/* signup and login design */
+
+
+
