--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,8 @@
                       <li><a class="dropdown-item" href="/service">Profile</a></li>
                       {% if user.is_authenticated %}
                           <!-- Logout Option -->
+                          <li><a class="dropdown-item" href="#">Cart</a></li>
+                          <li><a class="dropdown-item" href="#">orders</a></li>
                           <li><a class="dropdown-item" href="/logout">Logout</a></li>
                           {% if is_artisan %}
                               <!-- Add Item Option (Only for Artisans) -->
