--- a/templates/index.html
+++ b/templates/index.html
@@ -37,29 +37,34 @@
 <div class="container my-3">
   <h2 class="my-4 text-center">Find your product....</h2>
 
-  <div class="row row-cols-1 row-cols-md-4 g-3">
-    {% for product in products %}
-    <div class="col">
-      <div class="card shadow-sm">
-        <div class="image-container">
-          <img src="{% static product.image %}" class="card-img-top" alt="{{ product.name }}">
-        </div>
-        <div class="card-body">
-          <p>  {{ product.name }}</p>
-          <p> <b>Manufacturer:</b> {{ product.manufacturer }}</p>
-          <p class="card-text"> <b>Price</b>:&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> {{ product.price }}</p>
-          <div class="d-flex justify-content-between align-items-center">
+
+  
+    <div class="row row-cols-1 row-cols-md-4 g-3">
+      {% for product in products %}
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="image-container">
+            <img src="{% static product.image %}" class="card-img-top" alt="{{ product.name }}">
+          </div>
+          <div class="card-body" style="height: 200px; overflow: hidden;">
+            <p class="card-title mb-0"><b>{{ product.name }}</b></p> <br>
+            <p class="card-text mb-1">Manufacturer: <b> {{ product.manufacturer }}</b></p>
+            <p class="card-text">Price: <b><i class="fa-solid fa-indian-rupee-sign"></i>{{ product.price }}</b></p>
+          </div>
+          <div class="card-footer d-flex justify-content-between align-items-end">
             <div class="btn-group">
-               <a href="{% url 'view_product' product.id %}" class="btn btn-sm btn-outline-secondary">View</a>
+              <a href="{% url 'view_product' product.id %}" class="btn btn-sm btn-outline-secondary">View</a>
               <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
+              <button type="button" class="btn btn-sm btn-outline-secondary cart"><i class="fa-solid fa-cart-shopping"></i></button>
+              
             </div>
           </div>
         </div>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-</div>
+  
 
 {% endblock body %}
 
