--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,8 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+        .form-box{
+            width: 400px;
+            height: 45%;
+            border: 2px;
+            position: absolute;
+            backdrop-filter: blur(20px); 
+            margin-left: 40%;
+            margin-top: 10%;
+          } 
+
+        .reg{
+            width: 100%;
+            margin-left: 27%;
+            font-size: 25px;
+        }  
+        
+        .input-field{
+              position: relative;
+               width: 100%;
+               height: 40px;
+               border-bottom: 2px solid black;
+               margin: 1px 0;
+        }
+
+        .input-field1{
+              position: relative;
+               width: 100%;
+               height: 60px;
+               border-bottom: 2px solid black;
+               margin: 1px 0;
+              display: inline-block; 
+        }
+
+
+        .input-field div{
+            position: absolute;
+           font-weight: 500;
+           pointer-events: none;
+           transform: translateY(-50%);
+        }
+
+        .input-field input{
+          width: 100%;
+          background-color: transparent;
+          border: none;
+          outline: none;
+        }
+        .bn{
+           width: 100%;
+           height: 40px;
+           margin-top: 3px;
+          background-color: rgb(23, 21, 25);
+           border: none;
+          cursor: pointer;
+          color: white;
+          font-size: 20px;
+          font-weight: 500;
+        }
+       
+
+        .reg-login {
+           text-align: center; 
+           font-size: 20px;
+        }
+
+        .reg-login p a{
+            text-decoration: none;
+            color: rgb(37, 29, 44);
+        }
+
+        .reg-login p a:hover{
+        text-decoration: underline;
+        }
+        
+        .form-box{
+            border: 1px solid rgb(128, 126, 126);
+            padding: 20px;
+        }
+
+    </style>
 </head>
 <body>
+    <div class="form-box">
     <h2>Login</h2>
     {% if messages %}
     <ul>
@@ -16,27 +98,34 @@
 {% endif %}
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        
+        <div class="input-field">
         <!-- Username -->
         <label for="id_username">Username:</label>
         <input type="text" id="id_username" name="username" required><br>
+        </div>
 
+        <div class="input-field">
         <!-- Password -->
         <label for="id_password">Password:</label>
         <input type="password" id="id_password" name="password" required><br>
+        </div>
 
+        <div class="input-field1">
         <!-- User Type -->
         <label>User Type:</label><br>
         <input type="radio" id="customer" name="user_type" value="customer" checked>
         <label for="customer">Customer</label><br>
         <input type="radio" id="artisan" name="user_type" value="artisan">
         <label for="artisan">Artisan</label><br>
+        </div>
 
         <!-- Submit Button -->
-        <button type="submit">Login</button>
+        <button class="bn" type="submit">Login</button>
     </form>
-
+    <div class="reg-login">
     <!-- Link to Registration Page -->
-    <p>Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
+    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+    </div>
+</div>
 </body>
 </html>
