cart functionality with login validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                       <li><a class="dropdown-item" href="/service">Profile</a></li>
                       {% if user.is_authenticated %}
                           <!-- Logout Option -->
-                          <li><a class="dropdown-item" href="#">Cart</a></li>
+                          <li><a class="dropdown-item" href="/cart">Cart</a></li>
                           <li><a class="dropdown-item" href="#">orders</a></li>
                           <li><a class="dropdown-item" href="/logout">Logout</a></li>
                           {% if is_artisan %}
