--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -46,7 +46,8 @@
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" name="quantity" min="1" value="1">
             <div class="buttons mt-3">
-                <button type="button" class="btn btn-primary">Add to Cart</button>
+                <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary" style="color:white">
+                    Add to Cart</a>
                 <button type="button" class="btn btn-success">Buy Now</button>
                 <div class="mt-3">
                     <span>Share:</span>
