--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,46 +1,44 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}About{% endblock title %}
+{% block title %}Cart{% endblock title %}
 {% block extra_head %}{% endblock extra_head %}
 {% block body %}
 
 <div class="row">
-    <div class="col-lg-11">
-{% if cart %}
-
-
-    <ul>
-        {% for product in cart.products.all %}
-        <div class="card mb-3">
-            <div class="card-body">
-              <div class="d-flex justify-content-between">
-                <div class="d-flex flex-row align-items-center">
-                  <div>
-                    <img src="{% static product.image %}" class="img-fluid rounded-3" alt="{{ product.name }}" style="width: 65px;">
+  <div class="col-lg-11">
+      {% if cart %}
+          <ul>
+              {% for product in cart.products.all %}
+                  <div class="card mb-3">
+                      <div class="card-body" style="padding: 20px;"> <!-- Increase the padding -->
+                          <div class="d-flex justify-content-between">
+                              <div class="d-flex flex-row align-items-center">
+                                  <div>
+                                      <img src="{% static product.image %}" class="img-fluid rounded-3" alt="{{ product.name }}" style="width: 65px;">
+                                  </div>
+                                  <div class="ms-3">
+                                      <h5>{{ product.name }}</h5>
+                                      <p class="small mb-0">{{ product.manufacturer }}</p>
+                                  </div>
+                              </div>
+                              <div class="d-flex flex-row align-items-center">
+                                  <div style="width: 80px;">
+                                      <h5 class="mb-0">{{ product.price }}</h5>
+                                  </div>
+                                  <a href="{% url 'remove_from_cart' product.id %}" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                              </div>
+                          </div>
+                      </div>
                   </div>
-                  <div class="ms-3">
-                    <h5>{{ product.name }}</h5>
-                    <p class="small mb-0">{{ product.manufacturer }}</p>
-                  </div>
-                </div>
-                <div class="d-flex flex-row align-items-center">
-                  <div style="width: 80px;">
-                    <h5 class="mb-0">{{ product.price }}</h5>
-                  </div>
-                  <a href="{% url 'remove_from_cart' product.id %}" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>Your cart is empty.</p>
-
-    {% endif %}
-</div>
-<!-- Remaining HTML code -->
+              {% endfor %}
+          </ul>
+          <!-- Add Place Order button -->
+          <a href="{% url 'place_order' %}" class="btn btn-primary">Place Order</a>
+      {% else %}
+          <p>Your cart is empty.</p>
+      {% endif %}
+  </div>
+  <!-- Remaining HTML code -->
 </div>
 <a href="/" class="shop"><i class="fa-solid fa-arrow-left"></i>&nbsp;Continue shopping</a>
 
