--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
           <div class="card-footer d-flex justify-content-between align-items-end">
             <div class="btn-group">
               <a href="{% url 'view_product' product.id %}" class="btn btn-sm btn-outline-secondary">View</a>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Order</button>
+              <a href="{% url 'order_from_home' product_id=product.id %}" class="btn btn-sm btn-outline-secondary">order</a>
               <a href="{% url 'add_to_cart' product.id %}" class="btn btn-sm btn-outline-secondary cart">
                 <i class="fa-solid fa-cart-shopping"></i>
               </a>
