--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -48,7 +48,8 @@
             <div class="buttons mt-3">
                 <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary" style="color:white">
                     Add to Cart</a>
-                <button type="button" class="btn btn-success">Buy Now</button>
+                    <a href="{% url 'order_from_home' product_id=product.id %}" class="btn btn-success" style="color:white">Order</a>
+
                 <div class="mt-3">
                     <span>Share:</span>
                     <a href="#"><i class="fab fa-facebook-f cir"></i></a>
