some basic design upto order function is done

--- a/static/style.css
+++ b/static/style.css
@@ -83,10 +83,12 @@
 
 /* signup and login design */
 .shop {
-color: black;
+color: white;
 text-decoration: none;
-padding: 20px;
+padding: 5px;
 }
+
+
 
 
 
