--- a/templates/signup.html
+++ b/templates/signup.html
@@ -169,7 +169,7 @@
         <div class="input-field">
         <!-- Address -->
         <label for="id_address">Address</label>
-        <!-- <textarea id="id_address" name="address" required></textarea><br> -->
+      <textarea id="id_address" name="address" required></textarea><br> 
         </div>
 
         <div class="input-field">
