--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
               </li>
               <!-- Products Link -->
               <li class="nav-item">
-                  <a class="nav-link" href="#">Products</a>
+                  <a class="nav-link" href="/products">Products</a>
               </li>
               <!-- Account Dropdown -->
               <li class="nav-item dropdown">
