--- a/templates/base.html
+++ b/templates/base.html
@@ -55,11 +55,11 @@
               </li>
               <!-- Blogs Link -->
               <li class="nav-item">
-                  <a class="nav-link" href="/about">Blogs</a>
+                  <a class="nav-link" href="/blogs">Blogs</a>
               </li>
               <!-- Contact Link -->
               <li class="nav-item">
-                  <a class="nav-link" href="/contact">Contact</a>
+                  <a class="nav-link" href="/submit_query">Contact</a>
               </li>
           </ul>
           <!-- Search Form -->
