--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                       {% if user.is_authenticated %}
                           <!-- Logout Option -->
                           <li><a class="dropdown-item" href="/cart">Cart</a></li>
-                          <li><a class="dropdown-item" href="#">orders</a></li>
+                          <li><a class="dropdown-item" href="/orders">orders</a></li>
                           <li><a class="dropdown-item" href="/logout">Logout</a></li>
                           {% if is_artisan %}
                               <!-- Add Item Option (Only for Artisans) -->
