--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@
 {% block extra_head %} <link rel="stylesheet" type="text/css" href="{% static 'blogstyle.css' %}"> {% endblock extra_head %}
 {% block body %}
 
-<div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+<div class="p-4 p-md-5 mb-4 text-white rounded bg-cl">
     <div class="col-md-6 px-0">
       <h1 class="display-4 fst-italic"></h1>
       <h2 class="fw-bold">Discover the Art of Handicraft: A Journey Through History</h2>
@@ -146,5 +146,89 @@
         </button>
       </div>
 </div>
+{% comment %} #facts {% endcomment %}
+<h2 class="factt">Do You Know </h2>
+
+<div class="fact">
+    <div class="fact-info">
+        <h2 class="fact-title">Madhubani Art</h2>
+        <p class="fact-description">Madhubani paintings were first created at Mithila, the birthplace of Hindu goddess Sita. When Sita and her husband Prince Rama were to be married, King Janak, father to Sita, asked for paintings to capture moments of the marriage. Madhubani painting (or Mithila painting) was traditionally created by the women of various communities in the Mithila region of the Indian subcontinents. It originated from Madhubani district of the Mithila region of Bihar. Madhubani is also a major export center of these paintings.[7] This painting as a form of wall art was practiced widely throughout the region; the more recent development of painting on paper and canvas mainly originated among the villages around Madhubani, and it is these latter developments that led to the term "Madhubani art" being used alongside "Mithila Painting</p>
+    </div>
+    <img src="{% static 'img/fact1.jpg' %}" alt="Fact Image" class="fact-image">
+</div>
+
+<div class="fact">
+    <img src="{% static 'img/fact2.jpg' %}" alt="Fact Image" class="fact-image">
+    <div class="fact-info">
+        <h2 class="fact-title">Warli painting</h2>
+        <p class="fact-description">The Warli painting tradition in Maharashtra are among the finest examples of the folk style of paintings. The Warli tribe is one of the largest in India, located outside Mumbai. Till the 1970s, even though the tribal style of art is thought to date back as early as 10th century A.D.[1] The Warli culture is centered on the concept of Mother Nature and elements of nature are often focal points depicted in Warli painting. Farming is their main way of life and a large source of food for the tribe. They greatly respect nature and wildlife for the resources that they provide for life.[2] Warli artists use their clay huts as the backdrop for their paintings, similar to how ancient people used cave walls as their canvases</p>
+    </div>
+</div>
+
+<div class="fact">
+    <div class="fact-info">
+        <h2 class="fact-title">Kalamkari</h2>
+        <p class="fact-description">Kalamkari is a type of hand-painted cotton textile produced in the Indian state of Andhra Pradesh. Only natural dyes are used in Kalamkari, which involves twenty-three steps The first step in creating Kalamkari is steeping it in astringents and buffalo milk and then drying it under the sun. Afterwards, the red, black, brown, and violet portions of the designs are outlined with a mordant and cloth are then placed in a bath of alizarin. The next step is to cover the cloth, except for the parts to be dyed blue, in wax, and immerse the cloth in indigo dye. The wax is then scraped off and the remaining areas are painted by hand,similar to Indonesian</p>
+    </div>
+    <img src="{% static 'img/fact4.jpg' %}" alt="Fact Image" class="fact-image">
+</div>
+
+<div class="fact">
+    <img src="{% static 'img/fact6.jpg' %}" alt="Fact Image" class="fact-image">
+    <div class="fact-info">
+        <h2 class="fact-title">Bamboo Handicrafts</h2>
+        <p class="fact-description">The bamboo and cane crafts of Manipur include a wide range of traditional to modern creations. The raw materials required for the bamboo industry in this state are grown in the forests of Churachandpur, Jiribam, Tamenglong, and Imphal districts.  Some bamboo and cane items discovered in Manipur are sofa sets, Murhas, mats, basketry, tray, chair, table, flower vases, ashtrays, and more.</p>
+    </div>
+</div>
+
+{% comment %} founder sections {% endcomment %}
+<section id="founders">
+    <div class="container">
+        <!-- Main agenda and slogan -->
+        <div class="row">
+            <div class="col-lg-6">
+                <p><h3>Welcome to Artisan Hub,</h3><br> your one-stop destination for exploring and purchasing exquisite handcrafted items from talented artisans around the globe. At Artisan Hub, we are dedicated to showcasing the beauty and craftsmanship of handmade products, ranging from intricately designed home decor and traditional artworks to unique fashion accessories and timeless jewelry pieces. <br><br>Our platform aims to support local artisans and promote cultural diversity by providing a marketplace where artisans can share their stories, connect with customers, and showcase their authentic creations. With a mission to celebrate artistry and empower artisans, Artisan Hub offers a curated selection of high-quality, ethically sourced products that embody craftsmanship, tradition, and creativity. <br> <br> Join us on this journey to discover and support the artisans behind each masterpiece, and let their creativity inspire and enrich your life."</p>
+
+                <h3>"Handcrafted with Heart, Shared with the World."</h3>
+                <p>With every stitch, stroke, and sculpture, we embark on a journey to preserve the essence of our cultural heritage, igniting a renaissance of craftsmanship that honors the past, enriches the present, and inspires the future</p>
+            </div>
+            <!-- Founder images -->
+            <div class="col-lg-6 text-end">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="founder">
+                            <img src="{% static 'img/vamshi.jpg' %}" alt="Founder 1" class="img-fluid rounded-circle">
+                            <p class="founder-name">Vamshi S</p>
+                            <p class="founder-role">Co-founder</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="founder">
+                            <img src="{% static 'img/fact4.jpg' %}"alt="Founder 2" class="img-fluid rounded-circle">
+                            <p class="founder-name">Priyanka S</p>
+                            <p class="founder-role">Co-founder</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="founder">
+                            <img src="{% static 'img/fact4.jpg' %}"alt="Founder 3" class="img-fluid rounded-circle">
+                            <p class="founder-name">Arthi S</p>
+                            <p class="founder-role">Co-founder</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="founder">
+                            <img src="{% static 'img/fact4.jpg' %}" alt="Founder 4" class="img-fluid rounded-circle">
+                            <p class="founder-name">Ritika Mukerajee</p>
+                            <p class="founder-role">Co-founder</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 {% endblock body %}
