--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 {% block title %}Order Confirmation{% endblock title %}
+{% block extra_head %} <link rel="stylesheet" type="text/css" href="{% static 'blogstyle.css' %}"> {% endblock extra_head %}
 {% block body %}
-<div class="container">
+<div class="confirmation-box">
     <h1>Order Confirmation</h1>
     <p>Your order has been placed successfully!</p>
     <p>Order ID: {{ order.id }}</p>
@@ -9,4 +11,5 @@
     <p>Total Price: {{ total_price }}</p>
     <!-- Add more details about the order if needed -->
 </div>
+
 {% endblock body %}
